updated build script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build
         run: |
-          npm run build -- --prod
+          ng build --configuration production
       - name: Lint
         run: |
           npm run lint
