--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,9 @@ jobs:
 
     needs: lts_versions
 
-    strategy:
-      matrix:
-        node-version: ${{ fromJson(needs.lts_versions.outputs.matrix) }}
+    # strategy:
+    #   matrix:
+    #     node-version: ${{ fromJson(needs.lts_versions.outputs.matrix) }}
 
     steps:
       - uses: actions/checkout@v2
@@ -27,7 +27,8 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: latest
+          # node-version: ${{ matrix.node-version }}
 
       - name: Cache node modules
         id: cache-nodemodules
