--- a/angular.json
+++ b/angular.json
@@ -118,6 +118,9 @@
             }
           }
         },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
+        },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
