--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "ng deploy",
     "build:pro": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
